# redactly

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: SUPPORTED-TOOLS.md  VERIFICATION.md
docs/integrations/: README.md  codex-cli.md  cursor.md  gemini-cli.md  github-copilot.md  windsurf.md
goguard/: go.mod  main.go  main_test.go
redactly/: __init__.py  cli.py  config.py  detectors.py  engine.py  proxy.py  vault.py
redactly/adapters/: __init__.py  anthropic.py  openai_chat.py
scrimward/: __init__.py  cli.py  config.py  detectors.py  engine.py  image_redactor.py  proxy.py  vault.py
scrimward/adapters/: __init__.py  anthropic.py  base.py  gemini.py  openai_chat.py  openai_responses.py
tests/: test_redactly.py  test_scrimward.py
