[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrimward"
version = "0.0.1"
description = "Local, fail-closed redaction proxy for AI coding tools — mask secrets before they leave your machine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Scrimward" }]
keywords = ["redaction", "privacy", "proxy", "pii", "secrets", "llm", "ai-coding"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# On-device image redaction (Apple Vision) — macOS / Apple Silicon only. Without
# this extra, images fail closed (are refused) on every platform.
image = [
    "pillow>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]
# Opt-in encrypt-token vault (AES-SIV) — token IS the ciphertext, no cleartext
# at rest. Only needed when REDACT_VAULT_ENCRYPT is enabled.
vault-encrypt = ["cryptography>=42"]

[project.scripts]
# Entry point: `scrimward` → the click group exposed as scrimward.cli:main.
scrimward = "scrimward.cli:main"

[project.urls]
Homepage = "https://github.com/scrimward/scrimward"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrimward*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
